--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,13 +5,13 @@
   = csrf_meta_tags
   = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' 
   = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-
+ 
 %body
   %nav.navbar.navbar-default
     .container
       .navbar-brand= link_to "Receipe Box", root_path
       %ul.nav.navbar-nav.navbar-right
-        %li= link_to "New Recipe", new_recipe_path
+        %li= link_to "New Recipe", "/recipes/new"
         %li= link_to "Sign Up", root_path
   .container
     - flash.each do |name,msg|
