--- a/app/views/recipes/_direction_fields.html.haml
+++ b/app/views/recipes/_direction_fields.html.haml
@@ -1,4 +1,4 @@
 .form-inline.clearfix
   .nested-fields
-    = f.input :steps, input_html: {class: "form-input form-control"}
-    = link_to_remove_association "Remove", f, class: "btn btn-primary"
+    = f.text_field :steps, class: "form-input form-control"
+    = f.link_to_remove "Remove", class: "btn btn-primary"
