--- a/app/views/recipes/_ingredient_fields.html.haml
+++ b/app/views/recipes/_ingredient_fields.html.haml
@@ -1,4 +1,4 @@
 .form-inline.clearfix
   .nested-fields
-    = f.input :name, input_html:{class: 'form-control'}
-    = link_to_remove_association "Remove", f, class: "btn btn-primary"
+    = f.text_field :name, class: 'form-control' 
+    = f.link_to_remove "Remove", class: "btn btn-primary"
